--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>showcase</groupId>
     <artifactId>showcase</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>showcase</name>
     <url>http://maven.apache.org</url>
@@ -17,6 +17,8 @@
         <apache-commons-version>3.1</apache-commons-version>
         <jackson-version>2.1.1</jackson-version>
         <joda-time-version>2.1</joda-time-version>
+        <servlet-api-version>3.0.1</servlet-api-version>
+        <jetty-plugin-version>8.1.8.v20121106</jetty-plugin-version>
     </properties>
 
     <dependencies>
@@ -46,5 +48,34 @@
             <artifactId>joda-time</artifactId>
             <version>${joda-time-version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet-api-version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <!--<plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty-plugin-version}</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/showcase</contextPath>
+                    </webApp>
+                </configuration>
+            </plugin>-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <path>/showcase</path>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
