--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,5 +5,7 @@
         http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
     <display-name>showcase</display-name>
-
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
